[package]
name = "rust-variables"
version = "0.1.0"
authors = ["shota-tsuji <shotatuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "shadowing"
path = "src/shadowing.rs"

[[bin]]
name = "tuple-1"
path = "src/tuple-1.rs"

[[bin]]
name = "tuple-2"
path = "src/tuple-2.rs"

[[bin]]
name = "tuple-3"
path = "src/tuple-3.rs"

[[bin]]
name = "array-1"
path = "src/array-1.rs"

[[bin]]
name = "array-2"
path = "src/array-2.rs"

[[bin]]
name = "array-3"
path = "src/array-3.rs"
