[package]
name = "rust-variables"
version = "0.1.0"
authors = ["shota-tsuji <shotatuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "shadowing"
path = "src/shadowing.rs"

[[bin]]
name = "tuple-1"
path = "src/tuple-1.rs"

[[bin]]
name = "tuple-2"
path = "src/tuple-2.rs"

[[bin]]
name = "tuple-3"
path = "src/tuple-3.rs"

[[bin]]
name = "array-1"
path = "src/array-1.rs"

[[bin]]
name = "array-2"
path = "src/array-2.rs"

[[bin]]
name = "array-3"
path = "src/array-3.rs"

[[bin]]
name = "function-1"
path = "src/functions-1.rs"

[[bin]]
name = "function-2"
path = "src/functions-2.rs"

[[bin]]
name = "function-3"
path = "src/functions-3.rs"

[[bin]]
name = "expressions-1"
path = "src/expressions-1.rs"

[[bin]]
name = "return-values-1"
path = "src/return-values-1.rs"

[[bin]]
name = "return-values-2"
path = "src/return-values-2.rs"

[[bin]]
name = "if-expressions-1"
path = "src/if-expressions-1.rs"

[[bin]]
name = "if-expressions-2"
path = "src/if-expressions-2.rs"

[[bin]]
name = "if-expressions-3"
path = "src/if-expressions-3.rs"

[[bin]]
name = "if-expressions-4"
path = "src/if-expressions-4.rs"

[[bin]]
name = "loops-loop-1"
path = "src/loops-loop-1.rs"

[[bin]]
name = "loops-loop-2"
path = "src/loops-loop-2.rs"

[[bin]]
name = "loops-while-1"
path = "src/loops-while-1.rs"

[[bin]]
name = "loops-for-1"
path = "src/loops-for-1.rs"

[[bin]]
name = "loops-for-2"
path = "src/loops-for-2.rs"

[[bin]]
name = "loops-for-3"
path = "src/loops-for-3.rs"
